src/sfdc/base/main/default/objects/B2C_Instance__c/B2C_Instance__c.object-meta.xml
<CustomObject>
    <description>... represents an environment instance of B2C Commerce (ex. a sandbox, a realm, etc).</description>
    <label>B2C Instance</label>
    <nameField>
        <label>B2C Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>