src/sfdc/base/main/default/objects/B2C_Instance__c/fields/API_Url__c.field-meta.xml
<CustomField>
    <fullName>API_Url__c</fullName>
    <description>... represents the base OCAPI Data REST API url for the B2C Commerce Instance.</description>
    <inlineHelpText>... represents the base OCAPI Data REST API url for the B2C Commerce Instance.</inlineHelpText>
    <label>API Url</label>
    <type>Url</type>
</CustomField>