src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Instance_Description__c.field-meta.xml
<CustomField>
    <fullName>Instance_Description__c</fullName>
    <description>... represents a description of the B2C Commerce instance.</description>
    <inlineHelpText>... represents a description of the B2C Commerce instance.</inlineHelpText>
    <label>Instance Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>