src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Instance_Type__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type__c</fullName>
    <description>... describes the type of B2C Commerce instance being integrated with B2C Commerce.</description>
    <inlineHelpText>... describes the type of B2C Commerce instance being integrated with B2C Commerce.</inlineHelpText>
    <label>Instance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>