src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Instance_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>Instance_Type_formula__c</fullName>
    <formula>text(Instance_Type__c)</formula>
    <label>Instance Type</label>
    <type>Text</type>
</CustomField>