src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Integration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Integration_JSON__c</fullName>
    <description>... describes the last OCAPI JSON response used to initialize the B2C Commerce CustomerList and Site definitions for a B2C Commerce instance.</description>
    <inlineHelpText>... describes the last OCAPI JSON response used to initialize the B2C Commerce CustomerList and Site definitions for a B2C Commerce instance.</inlineHelpText>
    <label>Integration JSON</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>