src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Integration_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Last_Modified_Date__c</fullName>
    <description>... describes the date that B2C Commerce CustomerList and Site definitions were last processed.</description>
    <inlineHelpText>... describes the date that B2C Commerce CustomerList and Site definitions were last processed.</inlineHelpText>
    <label>Integration Last Modified Date</label>
    <type>DateTime</type>
</CustomField>