src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message__c</fullName>
    <description>... represents an ad-hoc integration message captured during the initialization of a B2C Commerce instance.</description>
    <inlineHelpText>... represents an ad-hoc integration message captured during the initialization of a B2C Commerce instance.</inlineHelpText>
    <label>Integration Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>