src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>... describes if this B2C Commerce instance is active and enabled for integration.</description>
    <inlineHelpText>... describes if this B2C Commerce instance is active and enabled for integration.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>