src/sfdc/base/main/default/objects/B2C_Instance__c/fields/JWT_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>JWT_Certificate_Name__c</fullName>
    <description>... represents the JWT Certificate Name associated to the default B2C Client ID for a given B2C Instance.</description>
    <formula>B2C_Client_ID__r.JWT_Certificate_Name__c</formula>
    <inlineHelpText>... represents the JWT Certificate Name associated to the default B2C Client ID for a given B2C Instance.</inlineHelpText>
    <label>JWT Certificate Name</label>
    <type>Text</type>
</CustomField>