src/sfdc/base/main/default/objects/B2C_Instance__c/fields/Total_CustomerLists__c.field-meta.xml
<CustomField>
    <fullName>Total_CustomerLists__c</fullName>
    <description>... represents the total number of B2C Commerce CustomerLists for his B2C Instance.</description>
    <inlineHelpText>... represents the total number of B2C Commerce CustomerLists for his B2C Instance.</inlineHelpText>
    <label>Total CustomerLists</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>