src/sfdc/base/main/default/objects/B2C_Instance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Instance_Type__c</columns>
    <columns>API_Url__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Total_CustomerLists__c</columns>
    <columns>Total_Sites__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>